Added functionality for AcceptInform messages.
git-svn-id: file:///home/sheu/svn/paxos@14 b5c893e7-625c-0410-bc27-8c7ae27023da